[tool.poetry]
name = "backpackbot"
version = "0.1.0"
description = ""
authors = ["awesomeplaya211 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
discord-pretty-help = "^1.3.3"
matplotlib = "^3.5.0"
discord-py-slash-command = "^3.0.1"
discord = "^1.7.3"
BackpackTF = "^0.1.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
